--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
   "author": "Tyler Stiene <tystiene@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@superjs/observe": "^1.1.8",
     "clone": "^2.1.2",
     "object-observable": "^1.0.8",
+    "object-observable-lite": "^1.0.0",
+    "object-observer": "^2.3.0",
     "object-sizeof": "^1.5.1",
+    "observable-slim": "^0.1.5",
+    "observe-object": "^1.0.0",
     "on-change": "^1.6.2",
     "pretty-bytes": "^5.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
